# germinator

./: .gitignore  README.md  pyproject.toml
src/germinator/: __init__.py
src/germinator/cli/: __init__.py  main.py  process.py
src/germinator/core/: __init__.py  context.py  mutation.py  tree.py
src/germinator/drivers/: __init__.py  base.py  mlir.py  subprocess_driver.py
src/germinator/engine/: __init__.py  generator.py  strategies.py  worker.py
src/germinator/families/: __init__.py  base.py
src/germinator/families/ssa/: __init__.py  base.py
src/germinator/families/ssa/mlir/: __init__.py  config.toml  family.py
src/germinator/grammar/: __init__.py  patterns.py  processor.py
src/germinator/grammar/grammars/: mlir.g4
src/germinator/seeds/: __init__.py  llm.py  population.py  store.py
