[project]
name = "germinator"
version = "0.1.0"
description = "An extensible grammar-based fuzzer for IR-family languages"
authors = []
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
keywords = ["fuzzing", "grammar", "compiler", "testing", "MLIR", "LLVM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Compilers",
]

dependencies = [
    "grammarinator>=23.7,<24",
    "dill>=0.3.6,<0.4",
    "tqdm>=4.65.0,<5",
    "click>=8.1.7,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]
llm = [
    "anthropic>=0.25.0",
]

[project.scripts]
germinator = "germinator.cli.main:main"
germinator-process = "germinator.cli.process:main"

[project.urls]
Homepage = "https://github.com/large-loris-models/germinator"
Repository = "https://github.com/large-loris-models/germinator"
Issues = "https://github.com/large-loris-models/germinator/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/germinator"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]